# randium

./: .gitignore
synthgen/: CHANGELOG.md  LICENSE  README.md  pyproject.toml
synthgen/src/synthgen/: __init__.py
synthgen/src/synthgen/core/: __init__.py  base.py  config.py  registry.py  seed_manager.py
synthgen/src/synthgen/engines/: __init__.py  async_engine.py  batch.py  stream.py
synthgen/src/synthgen/formatters/: __init__.py  csv_fmt.py  json_fmt.py  sql_fmt.py  yaml_fmt.py
synthgen/src/synthgen/providers/: __init__.py  custom.py  financial.py  gaming.py  geographic.py  iot.py  linguistic.py  personal.py  scientific.py  technical.py  temporal.py
synthgen/src/synthgen/utils/: __init__.py  helpers.py  safety.py
synthgen/src/synthgen/validators/: __init__.py  constraints.py  schema.py
